# FIAP-tech_challenge-books_api

./: .editorconfig  .env.development  README.md  alembic.ini  compose.yaml  pyproject.toml
src/books_api/: compose.yaml  main.py
src/books_api/alembic/: env.py
src/books_api/alembic/versions/: 58caed9c6fde_create_books_table.py  5cb91408cfa5_create_users_table.py
src/books_api/configs/: __init__.py  db_config.py  user_config.py
src/books_api/models/persistent_storage/entities/: books.py  users.py
src/books_api/models/persistent_storage/interfaces/: books_repository_interface.py  db_connection_handler_interface.py  users_repository_interface.py
src/books_api/models/persistent_storage/repositories/: books_repository.py  users_repository.py
src/books_api/models/persistent_storage/settings/: __init__.py  db_connection_handler.py
src/books_api/routers/: admin.py  books.py  dependencies.py
src/books_api/services/: books_etl.py  encryption.py  migrations.py  tokenization.py
